--- a/src/index.css
+++ b/src/index.css
@@ -560,9 +560,14 @@
     height: 830px;
   }
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 290px) and  (max-width: 320px) {
   .why-us {
     height: 900px;
+  }
+}
+@media screen and  (min-width: 250px)  and  (max-width: 290px) {
+  .why-us {
+    height: 980px;
   }
 }
 
